# archiver

./: .dockerignore  .envrc.dist  .gitignore  .releaserc.yaml  CODEOWNERS  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  quality.yaml  release.yml  workflows.yml
docs/example-payloads/: directory.json  simple.json
e2e/: conftest.py  test_sqs.py
localstack.d/: init-aws.sh
src/archiver/: config.py  logs.py  main.py  notification.py  payload.py  utils.py
tests/: test_config.py  test_main.py  test_utils.py
